most probably will not instantiate.
Signed-off-by: Kristof Szabados <Kristof.Szabados@ericsson.com>