@@ -191,7 +191,7 @@ public final class ObjectSet_definition extends ObjectSet implements IReferenceC
 		final ObjectSetElementVisitor_checker checker = new ObjectSetElementVisitor_checker(timestamp, location, myGovernor);
 		for (int i = 0; i < objectSetElements.size(); i++) {
 			final IObjectSet_Element element = objectSetElements.get(i);
-			element.setGenNameOse(getGenNameOwn(), new Integer(i + 1).toString());
+			element.setGenNameOse(getGenNameOwn(), Integer.valueOf(i + 1).toString());
 			element.accept(checker);
 		}
 
